--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -66,6 +66,8 @@ html {
       transparent 70%
     ),
     #000000;
+  background-attachment: fixed;
+  background-size: 100% 100%;
 }
 
 /* Global typography */
